--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="A utility to pull basic information about a given Okta tenant."
     />
-    <title>React App</title>
+    <title>OktaOrgInfo</title>
   </head>
   <body>
     <div id="root"></div>
