Added better descriptions of the data it pulls.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="A utility to pull basic information about a given Okta tenant."
+      content="A utility to pull basic information about a given Okta tenant such as OrgId, the cell, and custom domains."
     />
     <title>OktaOrgInfo</title>
   </head>
