Updated some metatags and added sitemap.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="A utility to pull basic information about a given Okta tenant such as OrgId, the cell, and custom domains."
     />
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Okta org, Okta OrgID, Okta cell name, Okta custom domains, Okta information lookup">
     <title>OktaOrgInfo</title>
   </head>
   <body>
