Actually specify the favicon.ico it since the site isn't at the root of the domain.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="google-site-verification" content="iaSj-HW7KMJNnHQkm0cexFLODR-3Iday65SOPKERW0U" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/OktaOrgInfo/favicon.ico" type="image/x-icon">
     <meta
       name="description"
       content="A utility to pull basic information about a given Okta tenant such as OrgId, the cell, and custom domains."
